# EMATS-backend

./: README.md  villas.json
emats_app/: db.sql
emats_app/nginx_config/: emats.conf
emats_app/supervisor_config/: emats.conf
postgres-docker/: docker-compose.yml
server/: .env  Cargo.toml
server/src/: config.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs
